--- a/static/styles.css
+++ b/static/styles.css
@@ -492,6 +492,13 @@ hr {
   text-align: left;
 }
 
+.hero-content img {
+  margin-bottom: 2rem;
+  object-fit: cover;
+  width: 100%;
+  height: 40%;
+}
+
 @media(max-width: 768px) {
   .hero-content {
     padding-top: 50px;
